--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Fun with COMP290!</title>
   </head>
   <body>
-      <p>My name is Zak Lintz and this website was created for COMP290. It is inteded to be used only as practice using git and Github for COMP290.</p>
+      <p>My name is Zak Lintz and this website was created for COMP290. It is inteded to be used only as practice for git and Github for COMP290.</p>
   </body>
 </html>
