--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   </head>
   <body>
       <p>My name is Zak Lintz and this website was created for COMP290. It is inteded to be used only as practice for git and Github for COMP290.</p>
+      <img src="JohnJo.jpg" height="200">
   </body>
 </html>
